
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int * tree_t ;


 int Huff_AddReference (int *,int) ;
 int Huff_GetBit (unsigned char*) ;
 int Huff_GetByteFromTree (int ,unsigned char*) ;
 int Huff_PrepareTree (int *) ;
 int MAX_MSGLEN ;
 int NOT_REFERENCED ;
 int huffBitPos ;
 int memcpy (unsigned char*,unsigned char*,int) ;

int Huff_DecompressPacket( unsigned char *msg, int offset, int cursize, int maxsize ) {
 tree_t tree;
 unsigned char buffer[MAX_MSGLEN];
 unsigned char *data;
 int outLen;
 int inLen;
 int i, j;
 int ch;

 data = msg + offset;
 inLen = cursize - offset;
 if( inLen <= 0 ) {
  return(cursize);
 }

 Huff_PrepareTree( tree );

 outLen = (data[0] << 8) + data[1];
 huffBitPos = 16;

 if( outLen > maxsize - offset ) {
  outLen = maxsize - offset;
 }

 for( i=0 ; i<outLen ; i++ ) {
  if( (huffBitPos >> 3) > inLen ) {
   buffer[i] = 0;
   break;
  }

  ch = Huff_GetByteFromTree( tree[2], data );

  if( ch == NOT_REFERENCED ) {
   ch = 0;
   for( j=0 ; j<8 ; j++ ) {
    ch <<= 1;
    ch |= Huff_GetBit( data );
   }
  }

  buffer[i] = ch;
  Huff_AddReference( tree, ch );
 }

 memcpy( data, buffer, outLen );
 return(offset + outLen);
}
